# pi5-5ai

./: README.md  main.py  main_dev.py  original.py  person_sentry.py  pyproject.toml  tft_camera.py  tft_camera_169.py  tft_camera_43.py  tft_inmp441_fft.py  tft_test.py  wiring_gpio.txt
