[project]
name = "pi5-5ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adafruit-blinka>=9.1.0",
    "adafruit-circuitpython-rgb-display>=3.14.4",
    "numpy<2",
    "opencv-python<4.10",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "rpi-lgpio>=0.6",
    "smbus2>=0.6.1",
    "sounddevice>=0.5.5",
    "spidev>=3.8",
]
